style/navigation/_menus.scss
#main-navigation {

	ul {

		li {
			padding: 8px $padding__content-mobile;
			margin-bottom: 0;
			margin: 0;

			&.current-menu-item:not(.cta-item) > a,
			&.current-menu-ancestor:not(.cta-item) > a {
				border-bottom: 3px solid $color__corporate;
			}

			a {
				@include font-size(.9);

				&:focus {
					background: none;
					outline: none;
				}
			}

			&:before {
				display: none;
			}

			&.cta-item {

				a {
					background-color: $color__background-button;
					color: $color__text-button;
					padding: .6em .8em;
					border-color: $color__border-button;
					box-shadow: 0 0 0 1px transparent;
					transition: background .15s ease-in-out,
								box-shadow .15s ease-in-out;
	
					&:visited {
						background-color: $color__background-button;
						color: $color__text-button;
					}
	
					&:hover {
						background-color: $color__background-button-hover;
						color: $color__text-button;
					}
	
					&:focus,
					&:active {
						background-color: $color__background-button-focus;
						color: $color__text-button;
					}
				}
			}
		}
	}

	.menu-item-has-children {
		background-color: rgba(255,255,255,0);
		transition: background-color .8s ease;

		a {
			display: block;
			position: relative;
		}

		> a:after {
			@include icon-content("\e90e");
			@include font-size(.45);
			position: absolute;
			right: 0;
			vertical-align: middle;
		}

		.sub-menu {
			display: block;
			overflow: hidden;
			max-height: 0;
			transition: max-height .8s ease;

			li {
				padding-bottom: 0;

				a {
					text-transform: none;
					font-weight: normal;
					padding: 0;
				}

				&.current-menu-item > a,
				&.current-menu-ancestor > a {
					color: $color__corporate;
					border-bottom: none;
				}
			}
		}

		&.expanded {
			background-color: $color__background-sub-menu;

			> a:after {
				@include icon-content("\e90b");
			}

			.sub-menu {
				max-height: 300px;
				display: block;
			}
		}
	}

	@media screen and (min-width: breakpoint('tablet-landscape')) {

		ul {

			li {
				padding: 0;
				
				a {
					transition: color .15s ease-in-out;
					display: block;
					padding-left: 10px;
					padding-right: 10px;
					
					&:hover {
						color: $color__corporate;
					}
				}

				&.cta-item {
					margin-left: 5px;

					a {
						display: inline;
					}
				}

				&.current-menu-item:not(.cta-item),
				&.current-menu-ancestor:not(.cta-item) {
					position: relative;

					&:after {
						content: '';
						display: block;
						height: 3px;
						width: 100%;
						background: $color__corporate;
					}

					> a {
						border-bottom: none;
					}
				}
			}
		}

		.menu-item-has-children {
			transition: none;

			.sub-menu {
				display: none;
				overflow: visible;
				background-color: $color__background-sub-menu;
				position: absolute;
				z-index: 10;
				padding: 15px 10px 20px;
				margin: 0;
				width: 190px;
				text-align: left;

				li {
					float: none;
					margin-bottom: 15px;

					&:last-of-type {
						margin-bottom: 0;
					}

					a {
						line-height: normal;
					}

					&.current-menu-item:after {
						display: none;
					}
				}
			}

			&.expanded {

				a:after {
					color: $color__corporate
				}
			}

			> a:after,
			&.expanded > a:after {
				@include icon-content("\e90b");
				position: static;
				margin-left: 5px;
			}

			.sub-menu {
				position: absolute;
			}
		}
	}
}

#page {
	position: relative;

	#main-navigation {
		position: fixed;
		width: 250px;
		top: 0;
		bottom: 0;
		overflow: auto;
		box-shadow: 0 0 3px rgba(0,0,0,.0);
	}

	&.menu-toggled-on {

		#main-navigation {
			box-shadow: 0 0 3px rgba(0,0,0,.2);
		}
	}

	@media screen and (min-width: breakpoint('phone')) {

		#main-navigation {
			width: 300px;
		}
	}

	@media screen and (min-width: breakpoint('tablet-landscape')) {

		&.menu-toggled-on #main-navigation,
		#main-navigation {
			position: static;
			width: auto;
			box-shadow: none;
			overflow: visible;
		}
	}
}

.menu-item.login,
.menu-item.logout {

	img {
		width: 20px;
		height: 20px;
		display: inline-block;
		vertical-align: middle;
		background: #ccc;
		border-radius: 50%;
	}

	a, span {
		text-transform: none;
	}
}

#main-navigation .profile-nav {
	@include font-size(.8);

	.my-account {

		&:before {
			display: none;
		}

		a {
			color: $color__text-main;
			text-decoration: none;
		}

		img {
			border-radius: 50%;
			width: 20px;
			height: 20px;
			margin-right: 5px;
			object-fit: cover;
			background: #aaa;
			display: inline-block;
			vertical-align: middle;
		}

		.user-name {
			text-transform: uppercase;
		}

		&.current-menu-item {

			a {
				border-bottom: none;
			}

			.user-name {
				border-bottom: 3px solid $color__corporate;
			}
		}
	}
}

.top-header,
.site-footer {

	.sub-menu {
		display: none;
	}
}

